logs/watchdog_run.log
[2025-10-19 22:28:23] Launching: C:\Users\owner\AppData\Local\Programs\Python\Python313\python.exe -u C:\Users\owner\Desktop\es_futures_backtester\paper_trader.py --connect-attempts 1 --force-delayed
[2025-10-19 22:28:23] [paper]   File "C:\Users\owner\Desktop\es_futures_backtester\paper_trader.py", line 1926
[2025-10-19 22:28:23] [paper]     )
[2025-10-19 22:28:23] [paper]     ^
[2025-10-19 22:28:23] [paper] SyntaxError: unmatched ')'
[2025-10-19 22:28:23] paper_trader.py exited with code 1
[2025-10-19 22:34:20] Launching: C:\Users\owner\AppData\Local\Programs\Python\Python313\python.exe -u C:\Users\owner\Desktop\es_futures_backtester\paper_trader.py --connect-attempts 1 --force-delayed
Traceback (most recent call last):
  File "C:\Users\owner\Desktop\es_futures_backtester\watchdog_single.py", line 71, in <module>
    main()
    ~~~~^^
  File "C:\Users\owner\Desktop\es_futures_backtester\watchdog_single.py", line 46, in main
    logline(f"Launching: {' '.join(cmd)}")
    ~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\owner\Desktop\es_futures_backtester\watchdog_single.py", line 33, in logline
    with open(LOG_PATH, "a", encoding="utf-8") as f:
         ~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
PermissionError: [Errno 13] Permission denied: 'C:\\Users\\owner\\Desktop\\es_futures_backtester\\logs\\watchdog_run.log'
[2025-10-19 22:37:50] Launching: C:\Users\owner\AppData\Local\Programs\Python\Python313\python.exe -u C:\Users\owner\Desktop\es_futures_backtester\paper_trader.py --connect-attempts 1 --force-delayed
[2025-10-19 22:37:50] [paper]   File "C:\Users\owner\Desktop\es_futures_backtester\paper_trader.py", line 2027
[2025-10-19 22:37:50] [paper]     Yes — that’s usually the easiest way.
[2025-10-19 22:37:50] [paper]         ^
[2025-10-19 22:37:50] [paper] SyntaxError: invalid character '—' (U+2014)
[2025-10-19 22:37:50] paper_trader.py exited with code 1
[2025-10-20 01:09:43] Watchdog: restart in 3s...
^C